# t0-drones

./: .gitignore  README.md  pyproject.toml
notebooks/: initial_walkthrough_example.ipynb
notes/: Makefile  drone-legislation-overview.tex  law-and-ai-refs.md  lf-2025-07-01.md
scripts/: count_tokens.py  download_xml_extract_txt.py  utils.py
