[project]
name = "t0-drones"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "faiss-cpu>=1.11.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "lxml>=6.0.0",
    "nltk>=3.9.1",
    "ollama>=0.5.1",
    "rank-bm25>=0.2.2",
    "requests>=2.32.4",
    "sentence-transformers>=5.0.0",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
]
